# kb

./: .gitignore  .pre-commit-config.yaml  bsearch.py  buddy_questions.docx  commands.md  commit_every_day.sh  factorial.py  git_commands.md  links.md  locustfile.py  mypy.ini  parser.py  pyproject.toml  requirements.txt  revert_string.py  sql.sql
algorithms/: dijkstra.py  factorial.py  fast_pow.py  fibonacci.py  graph_find_path.py  is_prime_number.py
algorithms/bst/: __init__.py  height_of_tree.py  level_order_traversal.py
algorithms/decorator/: func_decorator.py  timeit.py
data_structures/linked_list/: remove_duplicates.py
golang/: main.go
golang/algorithms/: factorial.go  fast_power.go  fibonacci.go  is_prime_number.go  minion_game.go  revers_string.go  sieve_of_eratoshenes.go  square_root.go
golang/hackerrank/: 1.go  2.go  angry_professor.go  apple_and_orange.go  array_manipulation.go  array_pairs.go  beautiful_days_at_the_movies.go  between_two_sets.go  birthday_chocolate.go  bon_appetit.go  breaking_the_records.go  camel_case.go  cat_and_mouse.go  circular_array_rotation.go  climbing_the_leaderboard.go  counting_valleys.go  day_of_the_programmer.go  delete_node.go  designer_pdf_viewer.go  divisible_sum_pairs.go  doubly_linked_list.go  drawing_book.go  dynamic_array.go  find_digits.go  forming_magic_square.go  get_money_spent.go  hacker_rank_string.go  hourglass_sum.go  hurdle_race.go  insert_node_specific_position_list.go  is_balanced.go  left_rotation.go  linked_list.go  match_strings.go  migratory_birds.go  pangrams.go  picking_numbers.go  print_and_reverse_linked_list.go  reverse_array.go  (+9 more)
python/: Min_Sum_Path_in_Matrix.py  async_ex.py  handle_exception.py  inversions.py  jump_game_array.py  kafka_producer.py  largest_continuous_sequence_zero_sum.py  longest_increasing_subsequence.py  math_sum_in_column.py  mro.py  pg_dumper.py  questions.py  singletone.py  sort_array_by_parity.py  two_sum.py
theory/: links.md  postgres.md  python.md
(+485 files in other folders)
