[tool.poetry]
name = "kb"
version = "0.1.0"
description = "knowledge base"
authors = ["Denis Sukhoverkhov <denis.sukhoverkhov@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
