[tool.poetry]
name = "kb"
version = "0.1.0"
description = "knowledge base"
authors = ["Denis Sukhoverkhov <denis.sukhoverkhov@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
locust = "^2.4.1"
aiocache = {extras = ["redis"], version = "^0.11.1"}
sanic = "^21.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
