[tool.poetry]
name = "kb"
version = "0.1.0"
description = "knowledge base"
authors = ["Denis Sukhoverkhov <denis.sukhoverkhov@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.12"
locust = "~2.4"
jupyterlab = "^3.2.2"
python-dotenv = "~0.19"
PyYAML = "~6.0"
pydantic = "~2.0"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
isort = "[5.10"
mypy = "^0.910"
"ruamel.yaml" = "^0.17.17"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = [
  '.toml',
  '.sh',
  '.git',
  '.ini',
  'Dockerfile',
  '.ipynb_checkpoints',
  'venv',
  '.env',
]

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
indent = '    '
sections = [
  'FUTURE',
  'STDLIB',
  'THIRDPARTY',
  'FIRSTPARTY',
  'LOCALPROJECT',
  'LOCALFOLDER',
]
default_section = 'THIRDPARTY'
known_standard_library = []

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_redundant_casts = true
warn_unused_configs = true
ignore_missing_imports = true
plugins = "pydantic.mypy"
